src/tests/NovaSharp.Interpreter.Tests/LuaFixtures/SyntaxErrorExceptionTUnitTests/RethrowWrapsExceptionWhenGlobalOptionEnabled.lua
-- @lua-versions: 5.1+
-- @novasharp-only: false
-- @expects-error: true
-- @source: src/tests/NovaSharp.Interpreter.Tests.TUnit/Units/SyntaxErrorExceptionTUnitTests.cs:24
-- @test: SyntaxErrorExceptionTUnitTests.RethrowWrapsExceptionWhenGlobalOptionEnabled
function broken(
